--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -23,6 +23,9 @@
 <script src="js/app/service/logon/service.js"></script>
 <script src="js/app/controller/util/util.js"></script>
 <script src="js/app/service/util/service.js"></script>
+<script src="js/app/controller/dashboard/dashboard.js"></script>
+<script src="js/app/controller/dashboard/controller.js"></script>
+<script src="js/app/service/dashboard/service.js"></script>
 
 </body>
 </html>
