--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -26,6 +26,9 @@
 <script src="js/app/controller/dashboard/dashboard.js"></script>
 <script src="js/app/controller/dashboard/controller.js"></script>
 <script src="js/app/service/dashboard/service.js"></script>
+<script src="js/app/controller/registration/registration.js"></script>
+<script src="js/app/controller/registration/controller.js"></script>
+<script src="js/app/service/registration/service.js"></script>
 
 </body>
 </html>
